@@ -11,6 +11,7 @@
     * Strings starting with a "." are no longer treated as urls by :open et.al.
     * add *-javascript* flag to [c]:abbreviate[c], [c]:iabbrev[c] and [c]:cabbrev[c].
     * :history -remove , remove history items by name/tags/url (only by date with :sanitize).
+    * Add [m];A[m] hint mode to show images' title or alt text.
 
 2010-04-07:
     * version 2.3.1
